fa-metrics/speech-rewrite-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: speech-strip
spec:
  stripPrefix:
    prefixes:
      - /speech
