fa-metrics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fa-metrics
  labels:
    app: fa-metrics
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: fa-metrics
  template:
    metadata:
      annotations:
        version/latest: "C"
        version/config: "v0002"
      labels:
        app: fa-metrics
    spec:
      nodeSelector:
        location: ngb
      containers:
        - name: fa-metrics-speech
          image: registry.services.atlantishq.de/atlantishq/fa-metrics-speech:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          args:
            - server 
            - "-m" 
            - en_US-lessac-high
        - name: fa-metrics-frontend
          image: registry.services.atlantishq.de/atlantishq/fa-metrics-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
        - name: fa-metrics-server
          image: registry.services.atlantishq.de/atlantishq/fa-metrics-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/debug
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: cache
              mountPath: /app/static/cache
            - name: user-mappings
              mountPath: /app/user_mappings.yaml
              subPath: user_mappings.yaml
      volumes:
        - name: cache
          emptyDir: {}
        - name: user-mappings
          configMap:
            name: fa-metrics-config
      restartPolicy: Always
