fa-metrics/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faf-metrics-server
spec:
  selector:
    app: faf-metrics
  ports:
    - name: http
      port: 8080
      targetPort: 8080
