fa-metrics/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faf-metrics-frontend
spec:
  selector:
    app: faf-metrics
  ports:
    - name: http
      port: 80
      targetPort: 80
