fa-metrics/speech-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fa-metrics-speech
spec:
  selector:
    app: fa-metrics
  ports:
    - name: http
      port: 5000
      targetPort: 5000
