fa-metrics/ingress-fa-metrics-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: legacy-favicon-redirect
spec:
  redirectRegex:
    regex: "^https://fa-metrics\\.rancher\\.katzencluster\\.atlantishq\\.de/favicon\\.svg$"
    replacement: "https://fa-companion.services.atlantishq.de/favicon.svg"
    permanent: false

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fa-metrics-legacy
  labels:
    app: fa-metrics
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/router.middlewares: legacy-favicon-redirect
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - fa-metrics.rancher.katzencluster..atlantishq.de
      secretName: fa-metrics-legacy-redirect-tls
  rules:
    - host: fa-metrics.rancher.katzencluster..atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: noop
                port:
                  number: 65535
